<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">爱跑步</string>
    <string name="action_settings">Settings</string>
    <string name="init_time_100millisecond">00:00:00</string>
    <string name="init_distance">00.00</string>
    <string name="init_time">00</string>
    <string name="start">开始运动</string>
    <string name="pause">暂停</string>
    <string name="contin">继续</string>
    <string name="finish">结束</string>
    <string name="energy">热量(Kcal)</string>
    <string name="distance">里程(Km)</string>
    <string name="speed">速度(Km/h)</string>
    <string name="cal">cal</string>
    <string name="km">km</string>
    <string name="hour">h</string>
    <string name="min">m</string>
    <string name="run">运动</string>
    <string name="record">跑步记录</string>
    <string name="detail">运动详情</string>
    <string name="info">跑步有道</string>    
    <string name="share">分享</string>
    <string name="weather">天气</string>
    <string name="user">用户信息</string>
    <string name="gps_no">GPS信号无</string>
    <string name="gps_weak">GPS信号弱爆</string>
    <string name="gps_good">GPS信号强</string>
    <string name="lockhint">>>>向右滑动解锁</string>
    <string name="TotalDistance">总里程</string>
    <string name="TotalTime">总时长</string>
    <string name="Time">时长</string>
    <string name="TotalCalorie">总卡路里</string>
    <string name="Calorie">卡路里</string>
    <string name="advise">有降水，推荐您在室内进行健身休闲运动；若坚持户外运动，须注意携带雨具并注意避雨防滑。</string>
	<string name="check">请打开GPS后继续使用</string>	    
	<string name="sex">性别</string>
	<string name="male">男</string>
	<string name="female">女</string>
	<string name="height">身高</string>
	<string name="weight">体重</string>
	<string name="age">年龄</string>
	<string name="account_manage">账号绑定</string>
    <string name="voice_reminder">语音提醒</string>
    <string name="offline_map">离线地图</string>
    <string name="check_updates">检查更新</string>
    <string name="like_soft">点赞给好评</string>
    <string name="feed_back">意见反馈</string>
    <string name="check_quit">退出当前账号</string>
    <string name="description">图片</string>
    <string name="setting">设置</string>
    <string name="delete">删除</string>
    <string name="offline">离线地图</string>
    <string name="login">登录</string>
    <string name="download">下载管理</string>
    <string name="city">城市列表</string>
    <string name="qqzone">分享到QQ空间</string>
    <string name="str_image_local">本地图片</string>
        
    <string name="pull_to_refresh">下拉可以刷新</string>  
    <string name="release_to_refresh">释放立即刷新</string>  
    <string name="refreshing">正在刷新…</string>  
    <string name="not_updated_yet">暂未更新过</string>  
    <string name="updated_at">上次更新于%1$s前</string>  
    <string name="updated_just_now">刚刚更新</string>  
    <string name="time_error">时间出错</string>

</resources>
