<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"   
    android:id="@+id/main"
    tools:context=".MainActivity" >

    <LinearLayout
        android:id="@+id/linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/running_maindate_bg"
        android:orientation="vertical" >
    	               
	    <TextView
	        android:id="@+id/tvTime"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:gravity="center"
	        android:text="@string/init_time_100millisecond"
	        android:textSize="60sp"
	        android:layout_marginTop="5dp" />
	    
	    <LinearLayout
	        android:id="@+id/text"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal"
	        android:gravity="center_horizontal"
	        android:layout_marginTop="6dp" >
	        
	        <TextView
		        android:layout_width="wrap_content"   
		        android:layout_height="wrap_content"  
		        android:layout_weight="1"
		        android:gravity="center"
		        android:textSize="12sp"		        
		        android:text="@string/speed"  		  
	        	/>
	    
		    <TextView    
		        android:layout_width="wrap_content"   
		        android:layout_height="wrap_content"  
		        android:layout_weight="1"
		        android:gravity="center"
		        android:textSize="12sp"
		        android:text="@string/distance"  
		        />
		    
		    <TextView    
		        android:layout_width="wrap_content"   
		        android:layout_height="wrap_content"
		        android:layout_weight="1"
		        android:gravity="center"
		        android:textSize="12sp"
		        android:text="@string/energy"  	
		        />
		    
		    </LinearLayout>
		    
	    <LinearLayout
	        android:id="@+id/data"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal"
	        android:gravity="center_horizontal" >
	        
	        <TextView
	            android:id="@+id/tvSpeed"
		        android:layout_width="wrap_content"   
		        android:layout_height="wrap_content"  
		        android:layout_weight="1"
		        android:gravity="center"
		        android:textSize="14sp"		        
		        android:text="@string/init_distance"  		  
	        	/>
	    
		    <TextView    
		        android:id="@+id/tvDistance"
		        android:layout_width="wrap_content"   
		        android:layout_height="wrap_content"  
		        android:layout_weight="1"
		        android:gravity="center"
		        android:textSize="14sp"
		        android:text="@string/init_distance"  
		        />
		    
		    <TextView    
		        android:id="@+id/tvEnergy"
		        android:layout_width="wrap_content"   
		        android:layout_height="wrap_content"
		        android:layout_weight="1"
		        android:gravity="center"
		        android:textSize="14sp"
		        android:text="@string/init_distance"  	
		        />
		    
		    </LinearLayout>
    </LinearLayout>
    
    <Button
        android:id="@+id/btnStart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:background="#3CB8D9"
        android:text="@string/start"        
        android:textSize="25sp" />
    
    <LinearLayout
        android:id="@+id/twoButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"     
        android:layout_alignParentBottom="true"
        android:visibility="invisible" >	                
	    <TextView
	        android:id="@+id/btnFinish"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"        	
	        android:gravity="center"       
	        android:textSize="25sp"         
	        android:background="@drawable/running_btn_stop"
	        android:text="@string/finish" />
	    
	    <TextView
	        android:id="@+id/btnPause"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"  
	        android:layout_weight="1"               
	        android:gravity="center"
	        android:textSize="25sp"        
	        android:background="@drawable/running_btn_continue"	                          
	        android:text="@string/pause" />        
    </LinearLayout>
    
    <com.run.unlock.SliderLayout 
        android:id="@+id/slider_layout"
        android:layout_width="match_parent"
        android:layout_height="49dp"
        android:layout_alignParentBottom="true"
        android:background="#3CB8D9"
        android:visibility="invisible" >
	    
        <TextView
            android:id="@+id/slider_icon"
            android:layout_width="wrap_content"
		    android:layout_height="wrap_content" 
		    android:layout_marginLeft="20dp"
		    android:drawableTop="@drawable/unlock" />
	    
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lockhint"
            android:layout_alignParentLeft="true"
            android:layout_toRightOf="@id/slider_icon" />                        
    </com.run.unlock.SliderLayout>

   <com.baidu.mapapi.map.MapView
        android:id="@+id/bmapView"
        android:layout_below="@id/linear"
        android:layout_above="@id/btnStart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true" />
	    
   <TextView
       android:id="@+id/tvGPS"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_below="@id/linear"
       android:padding="5dp"
       android:background="#fff"
       android:textColor="#CD3333"
       android:gravity="center"
       android:textSize="12sp"
       android:text="@string/gps_no" />

</RelativeLayout>
